trunk/Archive2/1c/2e56e8b2bc07c6/output
+ clang++ --std=c++11 main.cpp
main.cpp:26:7: error: no matching constructor for initialization of 'Weird'
Weird w = 
      ^
main.cpp:13:8: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 4 were provided
struct Weird : EmptyBase
       ^
main.cpp:13:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 4 were provided
main.cpp:13:8: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 4 were provided
1 error generated.
